# SemanticalCodeSearch

./: README.md  docker-compose.yml  main.py  pyproject.toml
src/: indexer.py  pipeline.py  search.py  server.py
src/IR/: __init__.py  models.py
src/graph/: base_extractor.py  c_extractor.py  manager.py  python_extractor.py
src/model/: LLM.py  embedding.py  orchestrator.py  reranker.py
src/parsers/: __init__.py  base_parser.py  c_parser.py  chunker.py  factory.py  python_parser.py
src/static/: index.html
src/storage/: chroma_storage.py  falkordb_storage.py  kuzu_storage.py  neo4j_storage.py  sqlite_storage.py
