[project]
name = "semanticalcodesearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "falkordblite>=0.5.0",
    "openai>=2.0.0",
    "kuzu>=0.11.3",
    "llama-cpp-python>=0.3.16",
    "llama-index-core>=0.14.10",
    "llama-index-llms-llama-cpp>=0.5.1",
    "llama-index-llms-openai>=0.6.12",
    "llama-index-packs-code-hierarchy>=0.6.1",
    "llama-index-readers-file>=0.5.6",
    "magika>=1.0.1",
    "neo4j>=6.0.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-language-pack>=0.13.0",
    "tree-sitter-python>=0.25.0",
]
